src/app/views/home/home.view.scss
.landing {
  .content {
    width: 100%;
    background-image: url(./../images/mainbg.svg);
    background-size: cover;
    padding: 30px 30px 20px;
    .header-wrapper {
      margin-bottom: 20px;
    }
    .welcome {
      margin: 0 auto;
      outline: none;
      display: flex;
      justify-content: center;
      width: 100%;
      .welcome-items {
        .welcome-main {
          margin: 0 auto;
          padding: 90px 30px;
          .row {
            margin: 0;
            .form-control {
              width: 436px;
            }
          }
          .welcome-text-heading {
            font-size: 36px;
            letter-spacing: 1.4px;
            color: $marine-blue;
            margin: 0;
            max-width: 775px;
          }
          .welcome-text-description {
            color: $evergreen;
            font-size: 24px;
            letter-spacing: 1.3px;
            margin-bottom: 27px;
            margin-top: 20px;
            max-width: 680px;
          }
        }
      }
    }
  }
}

